--- a/templates/aliwood/common.html
+++ b/templates/aliwood/common.html
@@ -26,14 +26,14 @@
 			</a>
 		</div>
 		<div class="navbar-nav">
-			<div class="nav-link nav-link-home"><a href="/">首页</a></div>
+			<div class="nav-link nav-link-home"><a {% if path == '/' %}class="active"{% endif %} href="/">首页</a></div>
 			<div class="nav-border"></div>
-			<div class="nav-link nav-link-data"><a href="/">视频数据</a></div>
-			<div class="nav-link"><a href="/">视频剪辑</a></div>
-			<div class="nav-link"><a href="/">视频评价</a></div>
+			<div class="nav-link nav-link-data"><a {% if path == '/data/' %}class="active"{% endif %} href="/data">视频数据</a></div>
+			<div class="nav-link"><a {% if path == '/edit/' %}class="active"{% endif %} href="/edit">视频剪辑</a></div>
+			<div class="nav-link"><a {% if path == '/rank/' %}class="active"{% endif %} href="/rank">视频评价</a></div>
 		</div>
 		<div class="navbar-button">
-			<div class="nav-link"><a href="/">历史剪辑</a></div>
+			<div class="nav-link"><a {% if path == '/history/' %}class="active"{% endif %} href="/history">历史剪辑</a></div>
 		</div>
 	</nav>
 	{% endblock header %}
