--- a/templates/aliwood/pages/home.html
+++ b/templates/aliwood/pages/home.html
@@ -41,11 +41,6 @@
   </div>
 {% endblock contents %}
 
-{% block foot %}
-  <footer>
-    <div class="footer-logo">
-      <img src="{% static 'image/logo.png' %}">
-    </div>
-    <p class="foot-note">© 2019 by IDEA LAB</p>
-  </footer>
-{% endblock %}
+{% block footer %}
+  {% include '../components/footer.html' %}
+{% endblock footer %}
