--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,8 @@ body {
 .navbar {
   width: 100%;
   height: 1rem;
+  z-index: 100;
+  background: #fff;
   border-radius: 0;
   margin-bottom: 0;
 }
@@ -79,4 +81,14 @@ body {
 .navbar-button {
   position: absolute;
   right: 0.6rem;
+}
+
+.sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 3.68rem;
+  height: 100%;
+  background: #FACD52;
+  padding-top: 1rem;
 }
