--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,9 @@ body {
 }
 
 .navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 1rem;
   z-index: 100;
@@ -83,14 +86,24 @@ body {
   right: 0.6rem;
 }
 
+.wrapper .dark {
+  background: #F7F7F5;
+}
+
 .content {
+  width: 100%;
+}
+
+.full-screen {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  min-height: 100%;
+  height: 100vh;
   padding-top: 1rem;
-  background: #F7F7F5;
+}
+
+.paddingLeft {
+  padding-left: 3.68rem;
 }
 
 .sidebar {
@@ -102,4 +115,3 @@ body {
   background: #FACD52;
   padding-top: 1rem;
 }
-
