--- a/templates/aliwood/pages/data.html
+++ b/templates/aliwood/pages/data.html
@@ -5,7 +5,7 @@
 {% endblock style %}
 
 {% block contents %}
-  <div class="content">
+  <div class="content dark full-screen paddingLeft">
     data
   </div>
 {% endblock contents %}
