--- a/templates/aliwood/pages/history.html
+++ b/templates/aliwood/pages/history.html
@@ -5,7 +5,7 @@
 {% endblock style %}
 
 {% block contents %}
-  <div class="content">
+  <div class="content dark">
     history
   </div>
 {% endblock contents %}
