--- a/templates/aliwood/pages/rank/genRank.html
+++ b/templates/aliwood/pages/rank/genRank.html
@@ -5,7 +5,7 @@
 {% endblock style %}
 
 {% block contents %}
-<div class="content">
+<div class="content dark full-screen">
   <div class="upload-icon">
     <img src="{% static 'image/upload.png' %}">
   </div>
