--- a/templates/aliwood/pages/rank/genRank.html
+++ b/templates/aliwood/pages/rank/genRank.html
@@ -1,4 +1,4 @@
-{% extends 'aliwood/layout/base.html' %}
+{% extends 'aliwood/layout/with-helper.html' %}
 {% block style %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/rank.css' %}" media="all">
