--- a/templates/aliwood/pages/rank/genRank.html
+++ b/templates/aliwood/pages/rank/genRank.html
@@ -14,7 +14,7 @@
     <p>或拖拽文件到虚线框内</p>
     <p>来上传自己的案例</p>
   </div>
-  <div class="upload-btn">
+  <div class="upload-btn upload-btn-active">
     <span>生成评价</span>
   </div>
 </div>
