--- a/templates/aliwood/components/helper.html
+++ b/templates/aliwood/components/helper.html
@@ -10,8 +10,13 @@
 	<div class="hepler-icon-close" id="hepler-icon-close">
 		<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 	</div>
-	{% block helper-content %}
-	{% endblock helper-content %}
+	<div class="helper-title">视频评价</div>
+	<div class="helper-content">
+		<div class="helper-content-item">
+			<div class="helper-content-item-subtitle"></div>
+			<div class="helper-content-item-detail">平台提供了不同视频的体验质量评价工具。用户可以上传自己的视频来评估它在不同用途时的体验质量。</div>
+		</div>
+	</div>
 </div>
 <script type="text/javascript">
 	// 提示栏初始化
