--- a/templates/aliwood/components/navbar.html
+++ b/templates/aliwood/components/navbar.html
@@ -15,5 +15,6 @@
 	</div>
 	<div class="navbar-button">
 		<div class="nav-link"><a href="/history">历史剪辑</a></div>
+		<div class="status-icon history-status history-status-optimizing"></div>
 	</div>
 </nav>
