--- a/templates/aliwood/pages/rank/genRank.html
+++ b/templates/aliwood/pages/rank/genRank.html
@@ -19,7 +19,7 @@
     <p>来上传自己的案例</p>
   </div>
   <div class="upload-btn">
-    <span>生成评价</span>
+    <a href="./rank_result">生成评价</a>
   </div>
 </div>
 {% endblock contents %}
