--- a/templates/aliwood/layout/with-siderbar-helper.html
+++ b/templates/aliwood/layout/with-siderbar-helper.html
@@ -1,12 +1,15 @@
 {% extends 'aliwood/layout/base.html' %}
 {% block style %}
 {% load static %}
-<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/fullScreen.css' %}" media="all"> -->
 {% endblock style %}
 
-{% block helper %}
-  <div class="helper">
-    {% block helper-content %}
-    {% endblock helper-content %}
-  </div>
+{% block sidebar %}
+<div class="sidebar">
+</div>
 {% endblock sidebar %}
+
+{% block helper %}
+<div class="helper">
+  {% include '../components/helper.html' %}
+</div>
+{% endblock helper %}
