feat: add styleTemplat page

--- a/templates/aliwood/components/navbar.html
+++ b/templates/aliwood/components/navbar.html
@@ -10,7 +10,7 @@
 		<div class="nav-link nav-link-home"><a href="/">首页</a></div>
 		<div class="nav-border"></div>
 		<div class="nav-link nav-link-data"><a href="/data">视频数据</a></div>
-		<div class="nav-link"><a href="/edit">视频剪辑</a></div>
+		<div class="nav-link"><a href="/edit/style_templat">视频剪辑</a></div>
 		<div class="nav-link"><a href="/rank/gen_rank">视频评价</a></div>
 	</div>
 	<div class="navbar-button">
